Compiler/Parser/openeLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/Project/OpenELanguage/Compiler\openeLang.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class openeLangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, K_ADD_OPT=50, K_SUB_OPT=51, K_MUL_OPT=52, 
		K_DIV_OPT=53, K_FULL_DIV_OPT=54, K_MOD_OPT=55, K_AECOM_OPT=56, K_ASSIGN_OPT=57, 
		K_EQUAL_OPT=58, K_NOT_EQUAL_OPT=59, K_GREAT_OPT=60, K_LESS_OPT=61, K_GREAT_EQU_OPT=62, 
		K_LESS_EQU_OPT=63, K_LIKE_EQU_OPT=64, K_OR_OPT=65, K_AND_OPT=66, INTEGER_LITERAL=67, 
		FLOAT_LITERAL=68, IDENTIFIER=69, WHITESPACE=70, NEWLINE=71, STRING_LITERAL=72, 
		OTHER_CHAR=73;
	public const int
		RULE_opene_src = 0, RULE_src_content = 1, RULE_program_set_file = 2, RULE_data_structure_file = 3, 
		RULE_global_variable_file = 4, RULE_dll_define_file = 5, RULE_dll_command = 6, 
		RULE_global_variable_list = 7, RULE_global_variable_item = 8, RULE_edition_spec = 9, 
		RULE_struct_declare = 10, RULE_table_comment = 11, RULE_member_item = 12, 
		RULE_library_spec = 13, RULE_prog_set = 14, RULE_prog_set_variable_decl_opt = 15, 
		RULE_prog_set_variable_decl = 16, RULE_variable_decl = 17, RULE_sub_program_opt = 18, 
		RULE_sub_program = 19, RULE_parameter_decl = 20, RULE_local_variable_decl = 21, 
		RULE_statement_list = 22, RULE_statement = 23, RULE_switch_statement = 24, 
		RULE_loop_statement = 25, RULE_condition_statement = 26, RULE_hierarchy_identifier = 27, 
		RULE_name_component = 28, RULE_expression = 29, RULE_data_set_value = 30, 
		RULE_datetime_value = 31, RULE_datetime_value_core = 32, RULE_macro_value = 33, 
		RULE_func_ptr = 34, RULE_bool_value = 35, RULE_number = 36, RULE_string_value = 37;
	public static readonly string[] ruleNames = {
		"opene_src", "src_content", "program_set_file", "data_structure_file", 
		"global_variable_file", "dll_define_file", "dll_command", "global_variable_list", 
		"global_variable_item", "edition_spec", "struct_declare", "table_comment", 
		"member_item", "library_spec", "prog_set", "prog_set_variable_decl_opt", 
		"prog_set_variable_decl", "variable_decl", "sub_program_opt", "sub_program", 
		"parameter_decl", "local_variable_decl", "statement_list", "statement", 
		"switch_statement", "loop_statement", "condition_statement", "hierarchy_identifier", 
		"name_component", "expression", "data_set_value", "datetime_value", "datetime_value_core", 
		"macro_value", "func_ptr", "bool_value", "number", "string_value"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.DLL\u547D\u4EE4'", "','", "'.\u5168\u5C40\u53D8\u91CF'", "'.\u7248\u672C'", 
		"'.\u6570\u636E\u7C7B\u578B'", "'.\u6210\u5458'", "'.\u652F\u6301\u5E93'", 
		"'.\u7A0B\u5E8F\u96C6'", "'.\u7A0B\u5E8F\u96C6\u53D8\u91CF'", "'.\u5B50\u7A0B\u5E8F'", 
		"'.\u53C2\u6570'", "'.\u5C40\u90E8\u53D8\u91CF'", "'.\u5224\u65AD\u5F00\u59CB'", 
		"'('", "')'", "'.\u5224\u65AD'", "'.\u9ED8\u8BA4'", "'.\u5224\u65AD\u7ED3\u675F'", 
		"'.\u5224\u65AD\u5FAA\u73AF\u9996'", "'.\u5224\u65AD\u5FAA\u73AF\u5C3E'", 
		"'.\u8BA1\u6B21\u5FAA\u73AF\u9996'", "'.\u8BA1\u6B21\u5FAA\u73AF\u5C3E'", 
		"'.\u53D8\u91CF\u5FAA\u73AF\u9996'", "'.\u53D8\u91CF\u5FAA\u73AF\u5C3E'", 
		"'.\u5FAA\u73AF\u5224\u65AD\u9996'", "'.\u5FAA\u73AF\u5224\u65AD\u5C3E'", 
		"'.\u5982\u679C'", "'.\u5426\u5219'", "'.\u5982\u679C\u7ED3\u675F'", "'.\u5982\u679C\u771F'", 
		"'.\u5982\u679C\u771F\u7ED3\u675F'", "'.'", "'['", "']'", "'{'", "'}'", 
		"'\u5E74'", "'\u6708'", "'\u65E5'", "'\u65F6'", "'\u5206'", "'\u79D2'", 
		"'/'", "':'", "'-'", "'#'", "'&'", "'\u771F'", "'\u5047'", null, null, 
		null, null, null, null, "'\uFF1D'", "'='", "'=='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "K_ADD_OPT", "K_SUB_OPT", "K_MUL_OPT", "K_DIV_OPT", "K_FULL_DIV_OPT", 
		"K_MOD_OPT", "K_AECOM_OPT", "K_ASSIGN_OPT", "K_EQUAL_OPT", "K_NOT_EQUAL_OPT", 
		"K_GREAT_OPT", "K_LESS_OPT", "K_GREAT_EQU_OPT", "K_LESS_EQU_OPT", "K_LIKE_EQU_OPT", 
		"K_OR_OPT", "K_AND_OPT", "INTEGER_LITERAL", "FLOAT_LITERAL", "IDENTIFIER", 
		"WHITESPACE", "NEWLINE", "STRING_LITERAL", "OTHER_CHAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "openeLang.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static openeLangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public openeLangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public openeLangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Opene_srcContext : ParserRuleContext {
		public Edition_specContext edition_spec() {
			return GetRuleContext<Edition_specContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(openeLangParser.NEWLINE, 0); }
		public Src_contentContext src_content() {
			return GetRuleContext<Src_contentContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(openeLangParser.Eof, 0); }
		public Opene_srcContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_opene_src; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IopeneLangVisitor<TResult> typedVisitor = visitor as IopeneLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOpene_src(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Opene_srcContext opene_src() {
		Opene_srcContext _localctx = new Opene_srcContext(Context, State);
		EnterRule(_localctx, 0, RULE_opene_src);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; edition_spec();
			State = 77; Match(NEWLINE);
			State = 78; src_content();
			State = 79; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Src_contentContext : ParserRuleContext {
		public Program_set_fileContext program_set_file() {
			return GetRuleContext<Program_set_fileContext>(0);
		}
		public Data_structure_fileContext data_structure_file() {
			return GetRuleContext<Data_structure_fileContext>(0);
		}
		public Global_variable_fileContext global_variable_file() {
			return GetRuleContext<Global_variable_fileContext>(0);
		}
		public Dll_define_fileContext dll_define_file() {
			return GetRuleContext<Dll_define_fileContext>(0);
		}
		public Src_contentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_src_content; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IopeneLangVisitor<TResult> typedVisitor = visitor as IopeneLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSrc_content(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Src_contentContext src_content() {
		Src_contentContext _localctx = new Src_contentContext(Context, State);
		EnterRule(_localctx, 2, RULE_src_content);
		try {
			State = 85;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 81; program_set_file();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 82; data_structure_file();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 83; global_variable_file();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 84; dll_define_file();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Program_set_fileContext : ParserRuleContext {
		public Prog_setContext prog_set() {
			return GetRuleContext<Prog_setContext>(0);
		}
		public Library_specContext[] library_spec() {
			return GetRuleContexts<Library_specContext>();
		}
		public Library_specContext library_spec(int i) {
			return GetRuleContext<Library_specContext>(i);
		}
		public Program_set_fileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program_set_file; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IopeneLangVisitor<TResult> typedVisitor = visitor as IopeneLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram_set_file(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Program_set_fileContext program_set_file() {
		Program_set_fileContext _localctx = new Program_set_fileContext(Context, State);
		EnterRule(_localctx, 4, RULE_program_set_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__6) {
				{
				{
				State = 87; library_spec();
				}
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 93; prog_set();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Data_structure_fileContext : ParserRuleContext {
		public Struct_declareContext[] struct_declare() {
			return GetRuleContexts<Struct_declareContext>();
		}
		public Struct_declareContext struct_declare(int i) {
			return GetRuleContext<Struct_declareContext>(i);
		}
		public Data_structure_fileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_data_structure_file; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IopeneLangVisitor<TResult> typedVisitor = visitor as IopeneLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitData_structure_file(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Data_structure_fileContext data_structure_file() {
		Data_structure_fileContext _localctx = new Data_structure_fileContext(Context, State);
		EnterRule(_localctx, 6, RULE_data_structure_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__4) {
				{
				{
				State = 95; struct_declare();
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Global_variable_fileContext : ParserRuleContext {
		public Global_variable_listContext global_variable_list() {
			return GetRuleContext<Global_variable_listContext>(0);
		}
		public Global_variable_fileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_global_variable_file; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IopeneLangVisitor<TResult> typedVisitor = visitor as IopeneLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobal_variable_file(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Global_variable_fileContext global_variable_file() {
		Global_variable_fileContext _localctx = new Global_variable_fileContext(Context, State);
		EnterRule(_localctx, 8, RULE_global_variable_file);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101; global_variable_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Dll_define_fileContext : ParserRuleContext {
		public Dll_commandContext[] dll_command() {
			return GetRuleContexts<Dll_commandContext>();
		}
		public Dll_commandContext dll_command(int i) {
			return GetRuleContext<Dll_commandContext>(i);
		}
		public Dll_define_fileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dll_define_file; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IopeneLangVisitor<TResult> typedVisitor = visitor as IopeneLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDll_define_file(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Dll_define_fileContext dll_define_file() {
		Dll_define_fileContext _localctx = new Dll_define_fileContext(Context, State);
		EnterRule(_localctx, 10, RULE_dll_define_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 103; dll_command();
				}
				}
				State = 108;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Dll_commandContext : ParserRuleContext {
		public IToken name;
		public IToken type;
		public IToken file;
		public IToken cmd;
		public ITerminalNode[] NEWLINE() { return GetTokens(openeLangParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(openeLangParser.NEWLINE, i);
		}
		public ITerminalNode[] IDENTIFIER() { return GetTokens(openeLangParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(openeLangParser.IDENTIFIER, i);
		}
		public ITerminalNode[] STRING_LITERAL() { return GetTokens(openeLangParser.STRING_LITERAL); }
		public ITerminalNode STRING_LITERAL(int i) {
			return GetToken(openeLangParser.STRING_LITERAL, i);
		}
		public Table_commentContext table_comment() {
			return GetRuleContext<Table_commentContext>(0);
		}
		public Parameter_declContext[] parameter_decl() {
			return GetRuleContexts<Parameter_declContext>();
		}
		public Parameter_declContext parameter_decl(int i) {
			return GetRuleContext<Parameter_declContext>(i);
		}
		public Dll_commandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dll_command; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IopeneLangVisitor<TResult> typedVisitor = visitor as IopeneLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDll_command(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Dll_commandContext dll_command() {
		Dll_commandContext _localctx = new Dll_commandContext(Context, State);
		EnterRule(_localctx, 12, RULE_dll_command);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; Match(T__0);
			State = 110; _localctx.name = Match(IDENTIFIER);
			State = 111; Match(T__1);
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==IDENTIFIER) {
				{
				State = 112; _localctx.type = Match(IDENTIFIER);
				}
			}

			State = 115; Match(T__1);
			State = 117;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==STRING_LITERAL) {
				{
				State = 116; _localctx.file = Match(STRING_LITERAL);
				}
			}

			State = 119; Match(T__1);
			State = 120; _localctx.cmd = Match(STRING_LITERAL);
			State = 123;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 121; Match(T__1);
				State = 122; table_comment();
				}
			}

			State = 125; Match(NEWLINE);
			State = 129;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__10) {
				{
				{
				State = 126; parameter_decl();
				}
				}
				State = 131;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NEWLINE) {
				{
				{
				State = 132; Match(NEWLINE);
				}
				}
				State = 137;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Global_variable_listContext : ParserRuleContext {
		public Global_variable_itemContext[] global_variable_item() {
			return GetRuleContexts<Global_variable_itemContext>();
		}
		public Global_variable_itemContext global_variable_item(int i) {
			return GetRuleContext<Global_variable_itemContext>(i);
		}
		public Global_variable_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_global_variable_list; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IopeneLangVisitor<TResult> typedVisitor = visitor as IopeneLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobal_variable_list(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Global_variable_listContext global_variable_list() {
		Global_variable_listContext _localctx = new Global_variable_listContext(Context, State);
		EnterRule(_localctx, 14, RULE_global_variable_list);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__2) {
				{
				{
				State = 138; global_variable_item();
				}
				}
				State = 143;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Global_variable_itemContext : ParserRuleContext {
		public IToken name;
		public IToken type;
		public IToken access;
		public IToken dimension;
		public ITerminalNode NEWLINE() { return GetToken(openeLangParser.NEWLINE, 0); }
		public ITerminalNode[] IDENTIFIER() { return GetTokens(openeLangParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(openeLangParser.IDENTIFIER, i);
		}
		public Table_commentContext table_comment() {
			return GetRuleContext<Table_commentContext>(0);
		}
		public ITerminalNode STRING_LITERAL() { return GetToken(openeLangParser.STRING_LITERAL, 0); }
		public Global_variable_itemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_global_variable_item; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IopeneLangVisitor<TResult> typedVisitor = visitor as IopeneLangVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobal_variable_item(this);
			else return visitor.VisitChildren(this);
		}
	}
